# project-43

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  ios-export-options.plist  rust-toolchain.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release-android.yml  release-ios.yml  release-linux.yml  release-macos.yml
bridge/: Cargo.toml
bridge/src/: lib.rs
bridge/src/api/: gate_key.rs  keys.rs
cli/: Cargo.toml
cli/src/: main.rs  util.rs
cli/src/bus_cmd/: mod.rs  subcmd.rs
cli/src/chain_cmd/: mod.rs  subcmd.rs
cli/src/device_id_cmd/: mod.rs  subcmd.rs
cli/src/gate_key_cmd/: mod.rs  subcmd.rs
cli/src/kdbx_cmd/: mod.rs  subcmd.rs
cli/src/key_mgmt/: keygen.rs  mod.rs  store.rs  subcmd.rs
cli/src/matrix_cmd/: mod.rs  subcmd.rs
cli/src/pgp/: mod.rs  subcmd.rs
cli/src/ssh_agent_cmd/: mod.rs  subcmd.rs
cli/src/wallet_cmd/: mod.rs  subcmd.rs
cli/tests/: test-crypt-decrypt.sh  test-sign-crypt.sh  test-sign-verify.sh
docs/: api-surface.md  decisions-and-gotchas.md  github-runner.md  project-overview.md  roadmap.md  vision.md
docs/decisions/: 0001-lib-cli-split.md  0002-matrix-as-transport.md  0003-vendored-matrix-sdk.md  0004-gate-key-and-secret-store-architecture.md  0004-yubikey-auth-slot.md  0005-software-key-fallback.md  0005-ui-keys-page-redesign-deferred.md  0006-level2-secret-store.md  0006-synapse-message-retention.md  0007-synapse-rate-limit.md  0007-wallet-payload-layer.md  README.md
infra/otel/: clickhouse-init-job.yaml  grafana-clickhouse-datasource.yaml  grafana-dashboard-p43-traces.yaml  grafana-dashboard-patch.yaml  grafana-deployment-patch.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  otelcol-configmap.yaml  otelcol.yaml
lib/: Cargo.toml
lib/src/: credential_cache.rs  lib.rs  pgp_ops.rs  telemetry.rs  util.rs
lib/src/bus/: authority.rs  bridge.rs  cert.rs  csr.rs  device.rs  device_key.rs  list.rs  message.rs  mod.rs  signer.rs
lib/src/gate_key/: mod.rs
lib/src/kdbx/: mod.rs
lib/src/key_store/: import_ssh.rs  keygen.rs  mod.rs  store.rs
lib/src/level2/store/: chain_store.rs  item.rs  mod.rs  object_store.rs  padding.rs  tests.rs
lib/src/matrix/: client.rs  device.rs  global.rs  mod.rs  pointer.rs  room.rs  verification.rs
lib/src/pkcs11/: card.rs  card_queue.rs  import_card.rs  mod.rs  ops.rs  soft_ops.rs  virtual_card.rs
lib/src/protocol/: mod.rs
lib/src/ssh_agent/: mod.rs
lib/src/sync_store/: chain_store.rs  item.rs  mod.rs  tests.rs
lib/src/wallet/: chain.rs  credential.rs  entry.rs  mod.rs  tests.rs
lib/tests/: ops.rs  virtual_card.rs
lib/tests/fixtures/: rsa4096_test.pub.asc  rsa4096_test.sec.asc
scripts/: set-android-secrets.sh  setup-runner.sh
ui/: README.md  pubspec.yaml
ui/android/app/: build.gradle.kts
ui/android/app/src/main/: AndroidManifest.xml
ui/android/app/src/main/kotlin/com/project43/p43/: MainActivity.kt
ui/integration_test/: simple_test.dart
ui/ios/Runner/: Info.plist
ui/ios/Runner.xcodeproj/: project.pbxproj
ui/lib/: main.dart
ui/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
ui/lib/src/rust/api/: simple.dart  simple.freezed.dart
ui/lib/src/screens/: agent_screen.dart  chat_screen.dart  devices_screen.dart  gate_key_setup_screen.dart  generate_key_screen.dart  key_helpers.dart  key_list_screen.dart  matrix_login_screen.dart  matrix_room_list_screen.dart  settings_screen.dart  verify_screen.dart
ui/lib/src/screens/agent/: agent_widgets.dart  request_model.dart
ui/lib/src/screens/keys/: add_credential_sheet.dart  card_import_sheet.dart  credential_detail_sheet.dart  credentials_tab.dart  key_card.dart  key_detail_sheet.dart  key_export_sheet.dart  key_import_sheet.dart  key_widgets.dart  pgp_key_detail_sheet.dart
ui/lib/src/screens/settings/: agent_section.dart  authority_section.dart  gate_key_section.dart  shared_widgets.dart  telemetry_section.dart
ui/lib/src/services/: biometric_service.dart  gate_key_service.dart  notification_service.dart  settings_service.dart  telemetry_service.dart  window_service.dart
ui/linux/: CMakeLists.txt
ui/linux/flutter/: generated_plugins.cmake
ui/linux/runner/: my_application.cc
ui/macos/Flutter/: GeneratedPluginRegistrant.swift
ui/macos/Runner/: DebugProfile.entitlements  Info.plist  Release.entitlements
ui/macos/Runner.xcodeproj/: project.pbxproj
ui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
ui/macos/Runner/Configs/: AppInfo.xcconfig
ui/rust/: Cargo.toml
ui/rust/.cargo/: config.toml
ui/rust/src/: frb_generated.rs  lib.rs
ui/rust/src/api/: simple.rs
ui/rust_builder/: pubspec.yaml
ui/rust_builder/android/: build.gradle  settings.gradle
ui/rust_builder/android/src/main/: AndroidManifest.xml
ui/rust_builder/ios/: rust_lib_p43.podspec
ui/rust_builder/linux/: CMakeLists.txt
ui/rust_builder/macos/: rust_lib_p43.podspec
ui/rust_builder/windows/: CMakeLists.txt
ui/test/: widget_test.dart
