[package]
name = "p43-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "p43"
path = "src/main.rs"

[dependencies]
p43            = { path = "../lib" }
clap           = { version = "4", features = ["derive"] }
anyhow         = "1"
rpassword      = "7"
dirs           = "6.0.0"
ssh-agent-lib  = "0.5"
ssh-key        = { version = "0.6", features = ["alloc", "ed25519"] }
signature      = { version = "2", features = ["alloc"] }
tokio          = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
matrix-sdk     = { version = "0.16.0", default-features = false, features = ["rustls-tls"] }
