[package]
name = "p43"
version = "0.1.0"
edition = "2021"

[features]
# Full desktop feature set — default for the CLI.
default = ["matrix", "pcsc", "ssh", "e2e-encryption", "crypto-nettle"]

# sequoia-openpgp crypto backends — pick exactly one.
# crypto-nettle: links against GNU Nettle (C library); fast, desktop-only.
# crypto-rust:   pure Rust, no C deps; required for iOS and the Flutter bridge.
crypto-nettle      = ["sequoia-openpgp/crypto-nettle"]
crypto-rust        = ["sequoia-openpgp/crypto-rust"]
# sequoia-openpgp requires this opt-in when using crypto-rust
# sequoia-openpgp requires both opt-ins when using crypto-rust
crypto-experimental = [
    "sequoia-openpgp/allow-experimental-crypto",
    "sequoia-openpgp/allow-variable-time-crypto",
]

# matrix-sdk integration (brings in tokio, rusqlite/sqlite3).
matrix = ["dep:matrix-sdk", "dep:tokio", "dep:futures-util"]

# YubiKey / OpenPGP card support via PC/SC (desktop only).
pcsc = ["dep:openpgp-card-sequoia", "dep:card-backend-pcsc"]

# SSH agent support.
ssh = ["dep:ssh-key"]

# End-to-end encryption for the Matrix session.
e2e-encryption = ["matrix-sdk/e2e-encryption", "matrix-sdk/sqlite"]

[dependencies]
# Always required
anyhow          = "1"
base64          = "0.22"
hex             = "0.4"
sequoia-openpgp = { version = "1", default-features = false }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
typeshare       = "1"

# pcsc feature
openpgp-card-sequoia = { version = "0.2", optional = true }
card-backend-pcsc    = { version = "0.5", optional = true }

# matrix feature
matrix-sdk   = { version = "0.16.0", default-features = false, features = ["rustls-tls"], optional = true }
tokio        = { version = "1", features = ["sync", "rt", "time"], optional = true }
futures-util = { version = "0.3", optional = true }

# ssh feature
ssh-key = { version = "0.6", features = ["alloc", "ed25519"], optional = true }

[dev-dependencies]
tempfile = "3"
tokio    = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }
