[package]
name = "p43"
version = "0.1.0"
edition = "2021"

[lib]
# No doc examples exist in this crate; skipping avoids a rustdoc/rustc
# binary mismatch when Homebrew's rustc and rustup's rustc are both present.
doctest = false

[features]
# Full desktop feature set — default for the CLI.
default = ["matrix", "pcsc", "ssh", "e2e-encryption", "crypto-rust", "crypto-experimental", "bus"]

# sequoia-openpgp crypto backends — pick exactly one.
# crypto-rust (default): pure Rust, no C deps; works on all targets including iOS/Android.
# crypto-nettle: links against GNU Nettle (C library); retained as an option but not used.
crypto-nettle      = ["sequoia-openpgp/crypto-nettle"]
crypto-rust        = ["sequoia-openpgp/crypto-rust"]
crypto-experimental = [
    "sequoia-openpgp/allow-experimental-crypto",
    "sequoia-openpgp/allow-variable-time-crypto",
]

# matrix-sdk integration (brings in tokio, rusqlite/sqlite3).
matrix = ["dep:matrix-sdk", "dep:tokio", "dep:futures-util"]

# YubiKey / OpenPGP card support via PC/SC (desktop only).
pcsc = ["dep:openpgp-card-sequoia", "dep:card-backend-pcsc"]

# SSH agent support.
ssh = ["dep:ssh-key", "dep:signature", "dep:rsa", "dep:sha2"]

# Bus: device registration and encrypted messaging.
bus = ["dep:coset", "dep:ciborium", "dep:ed25519-dalek", "dep:x25519-dalek",
       "dep:rand", "dep:hkdf", "dep:aes-gcm", "dep:sha2"]

# End-to-end encryption for the Matrix session.
e2e-encryption = ["matrix-sdk/e2e-encryption", "matrix-sdk/sqlite"]

# OpenTelemetry tracing — export spans via OTLP HTTP to the cluster collector.
# Empty endpoint → local fmt mode, zero network overhead.
telemetry = [
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:tracing-opentelemetry",
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-semantic-conventions",
    "dep:tokio",
]

[dependencies]
# Always required
anyhow          = "1"
base64          = "0.22"
hex             = "0.4"
rpassword       = "7"
hostname        = "0.4"
sequoia-openpgp = { version = "2", default-features = false }
serde           = { version = "1", features = ["derive"] }
serde_bytes     = "0.11"
serde_json      = "1"
typeshare       = "1"

# pcsc feature
openpgp-card-sequoia = { version = "0.2", default-features = false, optional = true }
card-backend-pcsc    = { version = "0.5", optional = true }

# matrix feature
matrix-sdk   = { version = "0.16.0", default-features = false, features = ["rustls-tls"], optional = true }
tokio        = { version = "1", features = ["sync", "rt", "time"], optional = true }
futures-util = { version = "0.3", optional = true }

# ssh feature
ssh-key   = { version = "0.6", features = ["alloc", "ed25519", "rsa", "encryption"], optional = true }
signature = { version = "2", optional = true }
rsa       = { version = "0.9", features = ["sha2"], optional = true }
sha2      = { version = "0.10", optional = true }

# bus feature
coset         = { version = "0.3", optional = true }
ciborium      = { version = "0.2", optional = true }
ed25519-dalek = { version = "2", features = ["rand_core"], optional = true }
x25519-dalek  = { version = "2", features = ["static_secrets"], optional = true }
rand          = { version = "0.9", optional = true }
hkdf          = { version = "0.12", optional = true }
aes-gcm       = { version = "0.10", optional = true }

# telemetry feature
tracing                            = { version = "0.1", optional = true }
tracing-subscriber                 = { version = "0.3", features = ["env-filter"], optional = true }
tracing-opentelemetry              = { version = "0.28", optional = true }
opentelemetry                      = { version = "0.27", optional = true }
opentelemetry_sdk                  = { version = "0.27", features = ["rt-tokio"], optional = true }
opentelemetry-otlp                 = { version = "0.27", features = ["http-proto", "reqwest-client"], optional = true }
opentelemetry-semantic-conventions = { version = "0.27", optional = true }


[dev-dependencies]
tempfile = "3"
tokio    = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }
