[package]
name = "rust_lib_p43"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
p43 = { path = "../../lib", default-features = false, features = [
    "crypto-rust",
    "crypto-experimental",
    "matrix",
    "e2e-encryption",
    "ssh",
    "bus",
] }

# pcsc (smart card / YubiKey) is not available on iOS — gate it out.
# Cargo merges features from [dependencies] and [target.*.dependencies]
# for the same crate, so this just adds "pcsc" on every platform except iOS.
[target.'cfg(not(target_os = "ios"))'.dependencies]
p43 = { path = "../../lib", features = ["pcsc"] }
base64 = "0.22"
dirs   = "6"
anyhow = "1"
hex    = "0.4"
# tokio for spawning tasks from StreamSink bridge functions
tokio = { version = "1", features = ["rt", "sync", "time"] }
rpassword = "7"
# Force bundled SQLite so Android doesn't need a system libsqlite3
rusqlite = { version = "0.37", features = ["bundled"] }

[features]
telemetry = ["p43/telemetry"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
